--- a/css/default.css
+++ b/css/default.css
@@ -1,22 +1,28 @@
 body {
-	margin-top: 12px;
-	background-color: #FAF5F8;
-  	font-family: "Georgia";
-	color:#262626;
-	font-size:15px;
+    margin-top: 12px;
+    background-color: #FAF5F8;
+    font-family: "Segoe UI", "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
+    color:#262626;
+    font-size:1.2em;
 }
-h1 { font-size: 26px; color: #096AC9; margin-bottom: 3px; }
+h1 { font-size: 2em; color: #096AC9; margin-bottom: 3px; }
 h1 a { text-decoration: none; color: #096AC9; }
 h1 a:hover {color: #096AC9; }
 h1 a:visited {color: #096AC9; }
 h1 a:hover {color: #096AC9; }
-h2 { font-size: 20px; }
-h3 { font-size: 18px; }
-pre { background: #000; color: #fff; padding-top: 15px; font-family: monospace; }
-hr { border: 0; width: 80%; border-bottom: 1px solid #aaa }
-.description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-#container { margin: 0 auto; width: 860px; display:block ;}
-.todo {	font-style: Italic; font-size: 0.9em; color: #993B25; font-weight: bold; }
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.3em; }
+#container { margin: 0 auto; width: 80%;min-height: 100%;min-width: 800px;display:block;margin-top: 0px;margin-bottom: 0px;margin-right: auto}
+#container nav { background-color: #4b4b53;display: block;height: 42px;margin-top: 10px;margin-bottom: 1px;}
+#container nav ul {list-style-type: none;display:block }
+#container nav ul li { float: left;display: block;margin-top: 5px;margin-left: 30px;}
+#container nav li a { color: white;text-decoration: none;}
+#nuget_packages { font-size: 0.8em;}
+#nuget_packages.package_id { margin-right: 10px;}
+#nuget_packages.package_desc { font-style: italic;}
+.description { font-size: 1.3em; margin-bottom: 30px;font-style: italic;}
+.todo {	font-style: italic; color: #993B25; font-weight: bold; }
+.keyword { font-style: italic;font-weight: bold;color:#262616}
 .footer { text-align: center; padding-top: 30px; font-style: italic; }
 .block{	margin: 0px; padding: 0px; border: 1px solid #2B2B2B; background-color: #FFFFEF; }
 .block p {margin-left:10px; }
